--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,10 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Python: Current File",
+      "name": "Python: Run Main",
       "type": "python",
       "request": "launch",
-      "program": "${file}",
+      "module": "app.main",
       "console": "integratedTerminal",
       "justMyCode": true
     }
